--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
       <p class="header__text">закрывающий тег</p>
     </header>
     <main>
-      <ul class="cards">
-        <li class="card">
+      <div class="cards">
+        <article class="card">
           <h2 class="card__title">
             Фритрек и нулевой спринт: Подготовка к работе
           </h2>
-          <div class="card__image-container">
-            <img
-              class="card__image"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               Это было самое начало пути. На этом этапе важно было проникнуться
@@ -46,7 +48,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -80,24 +86,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image brightness-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image brightness-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               На первых этапах мы работали со страхами и сомнениями, которые
@@ -111,7 +123,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -145,24 +161,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">1 спринт: А если не получится?</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image contrast-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image contrast-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               Первый проект — позади! Но это всё ещё самое начало пути. Радость
@@ -174,7 +196,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -208,24 +234,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image blur-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image blur-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               На этом этапе вы уже достаточно разбирались в основах вёрстки,
@@ -239,7 +271,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -273,24 +309,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image hue-rotate-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image hue-rotate-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               Всё это время вы были не одиноки (хотя, возможно, иногда и
@@ -305,7 +347,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -339,24 +385,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image saturate-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image saturate-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               На этом курсе вы постоянно решали разные задачи. В какой-то момент
@@ -368,7 +420,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -402,24 +458,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image sepia-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image sepia-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               Во время учёбы часто возникает чувство, когда не знаешь, за что
@@ -433,7 +495,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -467,24 +533,30 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-        <li class="card">
+        </article>
+        <article class="card">
           <h2 class="card__title">«Сейчас я здесь»</h2>
-          <div class="card__image-container">
-            <img
-              class="card__image contrast-brightness-filter"
-              src="./images/image.jpg"
-              alt="Пиксель-арт фургончика на улице ночью"
-              loading="lazy"
-            />
-            <span class="card__image-label" aria-hidden="true"
-              >&lt;/HTML&gt;</span
-            >
-          </div>
+          <figure class="card__image-container">
+            <picture>
+              <source srcset="./images/image.webp" type="image/webp" />
+              <source srcset="./images/image.avif" type="image/avif" />
+              <img
+                class="card__image contrast-brightness-filter"
+                src="./images/image.jpg"
+                alt="Пиксель-арт фургончика на улице ночью"
+                loading="lazy"
+              />
+            </picture>
+            <span class="card__image-label">&lt;/HTML&gt;</span>
+          </figure>
           <div class="card__content">
             <p class="card__content-text">
               Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
@@ -500,7 +572,11 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button button" type="button">
+            <button
+              class="card__icon-button button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <svg
                 class="card__like-icon like-icon"
                 width="39"
@@ -534,14 +610,18 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button" type="button">
+            <button
+              class="card__like-button button__action-effects button"
+              type="button"
+              aria-label="Поставить лайк"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
-        </li>
-      </ul>
+        </article>
+      </div>
       <button
-        class="save-button button"
+        class="save-button button__action-effects button"
         type="button"
         onclick="window['dialog-id'].showModal()"
       >
@@ -565,10 +645,10 @@
           >
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
-          <span class="button__text">Вставьте дискету, чтобы продолжить</span>
+          <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
         </div>
         <button
-          class="dialog__button-ok button"
+          class="dialog__button-ok button__action-effects button"
           type="button"
           onclick="window['dialog-id'].close()"
         >
